# openvino-plugins-for-obs-studio

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat
common/ittutils/: ittutils.h
obs_plugins/: CMakeLists.txt  README.md  plugin-macros.h.in
obs_plugins/background-concealment/: CMakeLists.txt  background-filter-ov.cpp  plugin-main.cpp
obs_plugins/common/include/: obs_opencv_conversions.hpp
obs_plugins/face-mesh/: CMakeLists.txt  face-mesh-filter-ov.cpp  plugin-main.cpp
obs_plugins/smart_framing/: CMakeLists.txt  object-detection-post-processing.cpp  object-detection-post-processing.h  object-detection.cpp  object-detection.h  plugin-main.cpp  smart-framing-filter-ov.cpp
openvino-models/mediapipe_face_detection/full-range/FP16/: face_detection-full_range-sparse-192x192.xml
openvino-models/mediapipe_face_detection/short-range/FP16/: face_detection_short_range-128x128.xml
openvino-models/mediapipe_face_landmark/with_attention/FP16/: face_landmark_with_attention_192x192.xml
openvino-models/mediapipe_face_landmark/without_attention/FP16/: face_landmark_without_attention_192x192.xml
openvino-models/mediapipe_pose/pose_detection/FP16/: pose_detection.xml
openvino-models/mediapipe_pose/pose_landmark/full/FP16/: pose_landmark.xml
openvino-models/mediapipe_self_seg/FP16/: selfie_segmentation_landscape.xml
openvino-models/yolo-v4-tiny/tf/FP16-INT8/: yolo-v4-tiny.xml
ovmediapipe/: CMakeLists.txt
ovmediapipe/include/ovmediapipe/: common.h  face_detection.h  face_landmarks.h  face_mesh.h  landmark_refinement_indices.h  pose.h  pose_detection.h  pose_landmark.h  selfie_segmentation.h  ssd_anchors.h
ovmediapipe/src/: common.cpp  face_detection.cpp  face_landmarks.cpp  face_mesh.cpp  pose.cpp  pose_detection.cpp  pose_landmark.cpp  selfie_segmentation.cpp  ssd_anchors.cpp
ovmediapipe/src/filtering/: low_pass_filter.cpp  low_pass_filter.h  one_euro_filter.cpp  one_euro_filter.h
